iperf-server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf-server
  namespace: stunner
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"server-pod"}]},"output":{"containers":[{"limits":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"}}]}}'
    deployment.kubernetes.io/revision: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app: iperf-server
    spec:
      containers:
      - name: server-pod
        image: l7mp/net-debug
        command: ["iperf", "-s", "-u", "-e", "--realtime", "-p", "5001"]
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "500m"
            ephemeral-storage: "1Gi"
            memory: "2Gi"
          requests:
            cpu: "500m"
            ephemeral-storage: "1Gi"
            memory: "2Gi"
